--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,9 @@
     "description": "Simple Laravel comment system",
     "keywords": ["laravel","comments"],
     "type": "library",
+    "require": {
+        "matthewbdaly/laravel-repositories": "^1.0"
+    },
     "require-dev": {
         "orchestra/testbench": "^3.5",
         "mockery/mockery": "^1.0",
