--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "phpunit/phpunit": "^6.4",
         "squizlabs/php_codesniffer": "^3.1",
         "satooshi/php-coveralls": "^1.0",
-        "psy/psysh": "^0.8.14"
+        "psy/psysh": "^0.8.14",
+        "matthewbdaly/artisan-standalone": "^0.0.3"
     },
     "license": "MIT",
     "authors": [
