--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "squizlabs/php_codesniffer": "^3.1",
         "satooshi/php-coveralls": "^1.0",
         "psy/psysh": "^0.8.14",
-        "matthewbdaly/artisan-standalone": "^0.0.3"
+        "matthewbdaly/artisan-standalone": "^0.0.3",
+        "sebastian/phpcpd": "^3.0"
     },
     "license": "MIT",
     "authors": [
@@ -31,6 +32,11 @@
         "psr-4": {
             "Tests\\": "tests/"
         }
+    },
+    "config": {
+        "preferred-install": "dist",
+        "sort-packages": true,
+        "optimize-autoloader": true
     },
     "extra": {
         "laravel": {
