--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,16 @@
         "matthewbdaly/laravel-repositories": "^1.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^3.5",
-        "mockery/mockery": "^1.0",
-        "phpunit/phpunit": "^6.4",
-        "squizlabs/php_codesniffer": "^3.1",
-        "satooshi/php-coveralls": "^1.0",
-        "psy/psysh": "^0.8.14",
-        "matthewbdaly/artisan-standalone": "^0.0.3",
-        "sebastian/phpcpd": "^3.0"
+        "orchestra/testbench": "3.6",
+        "orchestra/testbench-browser-kit": "~3.6",
+        "mockery/mockery": "~1.0",
+        "phpstan/phpstan": "^0.10.5",
+        "phpunit/phpunit": "^7.0",
+        "squizlabs/php_codesniffer": "^3.3",
+        "php-coveralls/php-coveralls": "^2.1",
+        "psy/psysh": "^0.9.8",
+        "matthewbdaly/artisan-standalone": "0.0.*",
+        "sebastian/phpcpd": "^4.0"
     },
     "license": "MIT",
     "authors": [
